force-app/main/default/objects/ca2cq_config__c/ca2cq_config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Migration Config</label>
</CustomObject>