force-app/main/default/objects/ca2cq_config__c/fields/Batch_size__c.field-meta.xml
<CustomField>
    <fullName>Batch_size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of questions the batch process will retrieve per batch execution</description>
    <inlineHelpText>This number delimits the number of questions, have in mind that we estimate 2Q + 2x500Q</inlineHelpText>
    <label>Batch Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>