force-app/main/default/objects/ca2cq_config__c/fields/Current_Executing_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Executing_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <description>0 - Email Preferences Backup
1 - Q&amp;A data migration
2 - BestAnswers assignation
3 - Reputation Updates
4 - Email Preferences Restauration</description>
    <label>Current Executing Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>