force-app/main/default/objects/ca2cq_config__c/fields/Exclude_this_Ids__c.field-meta.xml
<CustomField>
    <fullName>Exclude_this_Ids__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Comma separated list of the record ids to exclude from migration</description>
    <label>Exclude this Ids</label>
    <type>Checkbox</type>
</CustomField>