force-app/main/default/objects/ca2cq_config__c/fields/Include_this_Ids__c.field-meta.xml
<CustomField>
    <fullName>Include_this_Ids__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Id of the question records to migrate</description>
    <inlineHelpText>Comma separated list of the record ids to include in the migration</inlineHelpText>
    <label>Include this Ids</label>
    <type>Checkbox</type>
</CustomField>