force-app/main/default/objects/ca2cq_config__c/fields/Last_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Batch_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>