force-app/main/default/objects/ca2cq_config__c/fields/Last_processed_date__c.field-meta.xml
<CustomField>
    <fullName>Last_processed_date__c</fullName>
    <description>Holds value for last processed date on the questions to chatter question migration</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Holds value for last processed date on the questions to chatter question migration</inlineHelpText>
    <label>Last processed date</label>
    <type>DateTime</type>
</CustomField>