force-app/main/default/objects/ca2cq_config__c/fields/Migrate_all_Questions__c.field-meta.xml
<CustomField>
    <fullName>Migrate_all_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the batch process retrieves all questions</description>
    <label>Migrate all Questions</label>
    <type>Checkbox</type>
</CustomField>