force-app/main/default/objects/ca2cq_config__c/fields/Notification_email__c.field-meta.xml
<CustomField>
    <fullName>Notification_email__c</fullName>
    <description>Email address for receiving notifications after each execution</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email address for receiving notifications after each execution</inlineHelpText>
    <label>Notification</label>
    <type>Email</type>
</CustomField>