force-app/main/default/objects/ca2cq_config__c/fields/Question_Ids__c.field-meta.xml
<CustomField>
    <fullName>Question_Ids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Id of questions to include or exclude from migration</inlineHelpText>
    <label>Question Ids</label>
    <type>TextArea</type>
</CustomField>