force-app/main/default/objects/ca2cq_config__c/fields/Selected_Years__c.field-meta.xml
<CustomField>
    <fullName>Selected_Years__c</fullName>
    <description>Selected years to migrate</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Selected Years</label>
    <type>TextArea</type>
</CustomField>